# korsbakken_python_utils

./: README.md  pyproject.toml
src/korsbakken_python_utils/: dask_utils.py
src/korsbakken_python_utils/containers/: __init__.py  dataobject.py
src/korsbakken_python_utils/xarray/: __init__.py  indexing.py
test/containers/: test_dataobject.py
