[project]
name = "korsbakken-python-utils"
version = "0.3.0"
description = "Python utility code and helper functions by and for myself"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = [
    "LICENSE",
    "README.md"
]
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
]
